# memberships_mlops

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
jenkins/: Jenkinsfile  validate.py
notebooks/: eda.ipynb
src/data/: load_data.py  preprocess_data.py
src/deployment/: monitor.py
src/deployment/api/: app.py  requirements.txt
src/deployment/docker/: Dockerfile
src/features/: feature_engineering.py
src/models/: model_eval.py  model_registry.py  model_utils.py  train_model.py
src/pipelines/: pipeline_predict.py  pipeline_train.py  pipeline_validate.py
src/utils/: logger.py
tests/: conftest.py  test_data.py  test_models.py  test_pipeline.py  test_preprocess.py
