[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premium_membership_ml"
version = "0.1.0"
description = "Pipeline ML para predicción y análisis de membresías premium con CI/CD en Jenkins"
authors = [
    {name = "Nicolas", email = "nicolasjaramillome@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "db-dtypes>=1.2.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-storage>=2.14.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "mlflow>=2.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.flake8]
max-line-length = 100
exclude = ["venv", "__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.isort]
profile = "black"
